--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,149 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-image: url("/assets/bg-intro-mobile.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: hsl(0, 100%, 74%);
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "code"
+    "desc"
+    "free"
+    "form";
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bg-mobile {
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.code {
+    grid-area: code;
+    margin-top: 60px;
+    color: #fff;
+}
+
+.desc {
+    grid-area: desc;
+    color: #fff;
+    text-align: center;
+    width: 93%;
+    padding: 12px;
+    margin-top: 20px;
+}
+
+.free {
+    grid-area: free;
+    width: 82%;
+    height: 90px;
+    padding: 10px;
+    margin: 30px auto;
+    background-color: hsl(248, 32%, 49%);
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
+}
+
+.free:hover,
+.free:link {
+    background-color: hsl(248, 40%, 53%);
+}
+
+.free h4 {
+    color: #fff;
+    font-weight: 700;
+    text-align: center;    
+    padding: 10px 20px;
+}
+
+.free a {
+    text-decoration: none;
+}
+
+.free span {
+    font-weight: 400;
+}
+
+.form {
+    grid-area: form;
+    border: 1px solid #fff;
+    border: none;
+    border-radius: 10px;
+    background-color: #fff;
+    width: 82%;
+    height: 400px;
+    margin: 10px auto;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;    
+}
+
+.form input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 50px;
+    margin-right: 20px;
+    border: 1px solid #aaa;
+    border-radius: 3px;
+}
+
+.form input[name] {
+    margin: 10px 20px 5px 20px;
+    padding-left: 10px;
+    font-weight: 600;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.field a {
+    text-decoration: none;
+    background-color: hsl(154, 59%, 51%);
+    border: none;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    width: 90%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-transform: uppercase;
+    margin: 15px auto;    
+}
+
+.field a:hover {
+    background-color: hsl(154, 57%, 39%);
+}
+
+.field p {
+    text-align: center;
+    font-size: 12px;
+    color: hsl(246, 25%, 77%);
+    width: 90%;
+    padding: 0 10px;
+}
+
+.field span {
+    color: hsl(0, 100%, 74%);
+    font-weight: 600;
+}
+
