--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,16 @@ body {
     color: #fff;
 }
 
+.code h1 {
+    text-align: center;
+}
+
 .desc {
     grid-area: desc;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     width: 93%;
     padding: 12px;
@@ -54,7 +61,7 @@ body {
 
 .free {
     grid-area: free;
-    width: 82%;
+    width: 80%;
     height: 90px;
     padding: 10px;
     margin: 30px auto;
@@ -151,3 +158,69 @@ body {
     font-weight: 600;
 }
 
+@media only screen and (min-width: 700px) and (max-width: 1440px) {
+    body {
+        background-image: url("/assets/bg-intro-desktop.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-color: hsl(0, 100%, 74%);
+        font-family: 'Poppins', sans-serif;
+        font-size: 1rem;
+    }
+
+    #grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        grid-template-areas: 
+        "code free"
+        "desc form";
+        margin: 150px auto;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 70px;
+        /* text-align: left;
+        width: 88%;
+        margin-left: 10%; */
+    }
+
+    .desc p {
+        text-align: left;
+        padding-left: 110px;
+    }
+
+    /* .content .desc {
+        margin-left: 150px;
+    } */
+
+    .code {
+        font-size: 25px;
+        width: 70%;
+    }
+
+   .form {
+       height: 500px;
+   }
+
+   .field a {
+       margin-top: 45px;
+   }
+
+   .field p {
+       text-align: left;
+       width: 50ch;
+   }
+
+   .free {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       height: 60px;
+   }
+  
+}
