--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url("/assets/bg-intro-mobile.png");
+    background-image: url("../assets/bg-intro-mobile.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-color: hsl(0, 100%, 74%);
@@ -160,7 +160,7 @@ body {
 
 @media only screen and (min-width: 700px) and (max-width: 1440px) {
     body {
-        background-image: url("/assets/bg-intro-desktop.png");
+        background-image: url("../assets/bg-intro-desktop.png");
         background-repeat: no-repeat;
         background-size: contain;
         background-color: hsl(0, 100%, 74%);
